fix mobile alignment and update resume link

--- a/src/containers/skills/Skillsection.css
+++ b/src/containers/skills/Skillsection.css
@@ -7,7 +7,6 @@
 
 .skills-text {
   font-size: 1rem;
-  margin-left: 50px;
   letter-spacing: 1px;
 }
 .space {
